[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-ai"
version = "0.0.2"
description = "The All-Seeing Orchestrator for Hierarchical Autonomous Agents"
readme = "README.md"
authors = [
  { name = "Jashua Gupta", email = "findjashua+github@gmail.com" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "langgraph",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.8",
    "basedpyright>=1.21.0",
]

[project.urls]
"Homepage" = "https://github.com/findjashua/argus-ai"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.basedpyright]
include = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
venvPath = "."
venv = "venv"